--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"ip":"Creeper_20.aternos.me","name":"noobbbda123","port":"12644"}
+{"ip":"MR_20_GAMING.aternos.me","name":"Creeper_202","port":"24735"}
